--- a/gravatar-ui/src/main/res/values-pt-rBR/strings.xml
+++ b/gravatar-ui/src/main/res/values-pt-rBR/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-08-20 18:47:10+0000
+Translation-Revision-Date: 2024-10-31 09:54:03+0000
 Plural-Forms: nplurals=2; plural=(n > 1);
 Generator: GlotPress/2.4.0-alpha
 Language: pt_BR
 -->
 <resources>
-
+    <string name="gravatar_ui_empty_state_view_profile_button">Reivindicar perfil</string>
+    <string name="gravatar_ui_empty_state_user_info">Adicione sua localização, pronomes, etc.</string>
+    <string name="gravatar_ui_empty_state_display_name">Seu nome</string>
+    <string name="gravatar_ui_view_profile_button">Visualizar perfil</string>
+    <string name="gravatar_ui_empty_state_about_me">Compartilhe um pouco sobre você com o mundo. Seu avatar e sua bio por toda Internet.</string>
 </resources>
