--- a/gravatar-quickeditor/src/main/res/values-ar/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-ar/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-24 14:54:03+0000
+Translation-Revision-Date: 2024-11-28 18:54:03+0000
 Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;
 Generator: GlotPress/2.4.0-alpha
 Language: ar
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">لحفظ الصورة في مجلد عام، يتعين عليك منح الصلاحية. يمكنك منحها ضمن إعدادات التطبيق.</string>
+    <string name="gravatar_qe_download_manager_disabled_title">تم تعطيل DownloadManager. يرجى تمكينها لتنزيل الصور الرمزية.</string>
+    <string name="gravatar_qe_download_manager_not_available">DownloadManager غير متوفر</string>
+    <string name="gravatar_qe_image_download_queued">تم إدراج الصور في قائمة الانتظار للتنزيل. ستتلقى تنبيهًا بمجرد اكتماله.</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">إلغاء</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">حذف</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">هل تريد بالتأكيد حذف هذه الصورة؟</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">حذف الصورة</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">تنزيل صورة</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">حصل خطأ في أثناء حذف العنصر.</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">حذف الصورة الرمزية</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">حذف</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">فتح الإعدادات</string>
+    <string name="gravatar_qe_upload_image_content_description">رفع صورة</string>
+    <string name="gravatar_qe_happy_face_image_content_description">صورة وجه سعيد</string>
+    <string name="gravatar_qe_login_required">يلزم تسجيل الدخول</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">لا يوجد إنترنت</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">إغلاق</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">تسجيل الدخول</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">انتهت صلاحية الجلسة</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">المحاولة مجددًا</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">عفوًا</string>
+    <string name="gravatar_qe_capture_photo_icon_description">التقاط صورة</string>
+    <string name="gravatar_qe_photo_library_icon_description">مكتبة الصور</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">التقاط صورة</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">اختيار صورة</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">رفع صورة</string>
+    <string name="gravatar_qe_avatar_upload_error_action">إعادة المحاولة</string>
+    <string name="gravatar_qe_avatar_picker_title">الصور الرمزية</string>
+    <string name="gravatar_qe_bottom_sheet_done">تم</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">النص البديل</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">مزيد من الخيارات</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">صورة رمزية</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">النص البديل</string>
+    <string name="gravatar_qe_gravatar">جرافتار</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">تتجاوز الصورة المتوفرة الحد الأقصى للحجم: 10 ميجابايت</string>
+    <string name="gravatar_qe_dismiss">تجاهل</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">لالتقاط صورة، يتعين عليك منح صلاحية الكاميرا. يمكنك منحها ضمن إعدادات التطبيق.</string>
+    <string name="gravatar_qe_permission_required_alert_title">الصلاحية مطلوبة</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">حدث خطأ ما عند التحقق من بريدك الإلكتروني.</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">إزالة الرفع</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">تعذر رفع الصورة</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">فشل الرفع، اضغط للوصول إلى الإجراءات.</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">يبدو أنك تستخدم البريد الإلكتروني الخطأ لتسجيل الدخول. يرجى المحاولة مجددًا باستخدام %s في هذه المرة. شكرًا!</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">انتهت صلاحية الجلسة لأسباب تتعلق بالأمان.</string>
+    <string name="gravatar_qe_login_required_message">لتعديل ملفك الشخصي على جرافتار، يجب عليك تسجيل الدخول أولاً</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">عفوًا! يبدو أنك غير متصل بالإنترنت.</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">انتهت صلاحية الجلسة لأسباب تتعلق بالأمان. يرجى تسجيل الدخول لتحديث صورتك الرمزية.</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">حدث خطأ فظيع.</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">حدث خطأ وتعذر علينا الاتصال بخوادم جرافتار.</string>
+    <string name="gravatar_qe_avatar_selection_error">عفوًا، كان هناك خطأ في أثناء تحديد الصورة الرمزية.</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">لنقم بإعداد صورتك الرمزية</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">تم تحديث الصورة الرمزية! قد يستغرق الظهور في كل مكان بضع دقائق.</string>
+    <string name="gravatar_qe_avatar_picker_description">اختر الصور الرمزية التي تفضِّلها أو ارفعها، واربطها بعنوان بريدك الإلكتروني.</string>
 </resources>
