--- a/gravatar-quickeditor/src/main/res/values-de/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-de/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-24 11:54:03+0000
+Translation-Revision-Date: 2024-11-27 11:54:03+0000
 Plural-Forms: nplurals=2; plural=n != 1;
 Generator: GlotPress/2.4.0-alpha
 Language: de
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">Zum Speichern des Bilds in einem öffentlichen Ordner musst du die entsprechende Berechtigung erteilen. Die Berechtigung kannst du in den App-Einstellungen erteilen.</string>
+    <string name="gravatar_qe_download_manager_disabled_title">DownloadManager ist deaktiviert. Aktiviere die Funktion, um Avatare herunterladen zu können.</string>
+    <string name="gravatar_qe_download_manager_not_available">DownloadManager ist nicht verfügbar</string>
+    <string name="gravatar_qe_image_download_queued">Der Bild-Download wurde in die Warteschlange gestellt. Nach Abschluss erhältst du eine Benachrichtigung.</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">Abbrechen</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">Löschen</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">Bist du sicher, dass du dieses Bild löschen möchtest?</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">Bild löschen</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">Bild herunterladen</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">Fehler beim Löschen des Bilds.</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">Löschen</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">Avatar löschen</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">Einstellungen öffnen</string>
+    <string name="gravatar_qe_upload_image_content_description">Bild hochladen</string>
+    <string name="gravatar_qe_happy_face_image_content_description">Bild mit fröhlichem Gesicht</string>
+    <string name="gravatar_qe_login_required">Anmelden erforderlich</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">Kein Internet</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">Schließen</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">Anmelden</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">Sitzung abgelaufen</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">Erneut versuchen</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">Ups</string>
+    <string name="gravatar_qe_capture_photo_icon_description">Foto aufnehmen</string>
+    <string name="gravatar_qe_photo_library_icon_description">Foto-Bibliothek</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">Foto aufnehmen</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">Foto auswählen</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">Bild hochladen</string>
+    <string name="gravatar_qe_avatar_upload_error_action">Erneut versuchen</string>
+    <string name="gravatar_qe_avatar_picker_title">Avatare</string>
+    <string name="gravatar_qe_bottom_sheet_done">Fertig</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">Alternativer Text</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">Alternativtext</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">Weitere Optionen</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">Avatar-Bild</string>
+    <string name="gravatar_qe_gravatar">Gravatar</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">Das bereitgestellte Bild überschreitet die maximal zulässige Größe: 10 MB</string>
+    <string name="gravatar_qe_dismiss">Verwerfen</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">Um ein Foto zu machen, musst du die Berechtigung zur Nutzung der Kamera erteilen. Die Berechtigung kannst du in den App-Einstellungen erteilen.</string>
+    <string name="gravatar_qe_permission_required_alert_title">Berechtigung erforderlich</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">Beim Verifizieren deiner E-Mail-Adresse ist ein Fehler aufgetreten.</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">Upload entfernen</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">Bild konnte nicht hochgeladen werden</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">Upload fehlgeschlagen. Tippen, um Aktionen anzuzeigen.</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">Scheinbar hast du beim Anmelden die falsche E-Mail-Adresse verwendet. Bitte versuche es mit %s noch einmal. Danke!</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">Die Sitzung ist aus Sicherheitsgründen abgelaufen.</string>
+    <string name="gravatar_qe_login_required_message">Du musst dich anmelden, um dein Gravatar-Profil ändern zu können</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">Die Sitzung ist aus Sicherheitsgründen abgelaufen. Bitte melde dich an, um deinen Avatar zu aktualisieren.</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">Etwas ist ziemlich schiefgegangen.</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">Es ist ein Fehler aufgetreten und wir konnten keine Verbindung zu den Servern von Gravatar herstellen.</string>
+    <string name="gravatar_qe_avatar_selection_error">Ups, beim Auswählen des Avatars ist ein Fehler aufgetreten.</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">Richten wir deinen Avatar ein</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">Hoppla! Du bist anscheinend nicht mit dem Internet verbunden.</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">Avatar aktualisiert! Es kann ein paar Minuten dauern, bis er überall angezeigt wird.</string>
+    <string name="gravatar_qe_avatar_picker_description">Wähle deine Lieblingsavatarbilder aus – oder lade sie hoch – und verbinde sie mit deiner E-Mail-Adresse.</string>
 </resources>
