--- a/gravatar-quickeditor/src/main/res/values-fr/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-fr/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-23 13:54:03+0000
+Translation-Revision-Date: 2024-11-29 13:20:45+0000
 Plural-Forms: nplurals=2; plural=n > 1;
 Generator: GlotPress/2.4.0-alpha
 Language: fr
 -->
 <resources>
-
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">Télécharger l\'image</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">Supprimer l\'image</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">Êtes-vous sûr(e) de vouloir supprimer l\'image ?</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">Supprimer</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">Annuler</string>
+    <string name="gravatar_qe_image_download_queued">Le téléchargement de l\'image a été lancé. Vous recevrez une notification lorsqu\'il sera terminé.</string>
+    <string name="gravatar_qe_download_manager_not_available">DownloadManager n\'est pas disponible</string>
+    <string name="gravatar_qe_download_manager_disabled_title">DownloadManager est désactivé. Veuillez l\'activer pour pouvoir télécharger les avatars.</string>
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">Pour enregistrer l\'image dans un dossier, vous devez en accorder l\'autorisation dans les paramètres de l\'application.</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">Supprimer</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">Supprimer l\'avatar</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">Erreur de suppression de l\'image.</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">Ouvrir les paramètres</string>
+    <string name="gravatar_qe_upload_image_content_description">Charger une image</string>
+    <string name="gravatar_qe_happy_face_image_content_description">Image visage joyeux</string>
+    <string name="gravatar_qe_login_required">Connexion obligatoire</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">Pas de connexion Internet</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">Fermer</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">Se connecter</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">La session a expiré</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">Réessayer</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">Oups</string>
+    <string name="gravatar_qe_capture_photo_icon_description">Prendre une capture d’une photo</string>
+    <string name="gravatar_qe_photo_library_icon_description">Bibliothèque de photos</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">Prendre une photo</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">Choisir une photo</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">Charger une image</string>
+    <string name="gravatar_qe_avatar_upload_error_action">Réessayer</string>
+    <string name="gravatar_qe_avatar_picker_title">Avatars</string>
+    <string name="gravatar_qe_bottom_sheet_done">Terminé</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">Texte alternatif</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">Texte alternatif</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">Plus d’options</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">Image d’avatar</string>
+    <string name="gravatar_qe_gravatar">Gravatar</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">L’image fournie dépasse la taille maximum : 10 Mo</string>
+    <string name="gravatar_qe_dismiss">Ignorer</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">Pour prendre une photo, vous devez accorder les droits d’accès à l’appareil photo. Vous pouvez les accorder dans les réglages de l’application.</string>
+    <string name="gravatar_qe_permission_required_alert_title">Autorisation requise</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">Un problème est survenu lors de la vérification de votre adresse e-mail.</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">Supprimer le chargement</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">Le chargement a échoué, appuyez pour voir les options.</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">Impossible de charger l’image</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">Il semblerait que vous ayez utilisé une adresse e-mail incorrecte pour vous connecter. Veuillez réessayer en utilisant %s cette fois. Merci !</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">La session a expiré pour des raisons de sécurité.</string>
+    <string name="gravatar_qe_login_required_message">Pour modifier votre profil Gravatar, vous devez d’abord vous connecter</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">La session a expiré pour des raisons de sécurité. Veuillez vous connecter pour mettre à jour votre avatar.</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">Un problème est malheureusement survenu.</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">Un problème est survenu et nous n’avons pas pu nous connecter aux serveurs Gravatar.</string>
+    <string name="gravatar_qe_avatar_selection_error">Oups, une erreur est survenue lors de la sélection de l’avatar.</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">Configurons votre avatar</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">Hum. Il semblerait que vous ne soyez pas connecté(e) à Internet.</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">Avatar mis à jour ! Cela peut prendre quelques minutes pour que le changement apparaisse partout.</string>
+    <string name="gravatar_qe_avatar_picker_description">Choisissez ou chargez vos images d’avatar favorites et connectez-les à votre adresse e-mail.</string>
 </resources>
