--- a/gravatar-quickeditor/src/main/res/values-in/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-in/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-24 09:54:03+0000
+Translation-Revision-Date: 2024-11-27 09:54:03+0000
 Plural-Forms: nplurals=2; plural=n > 1;
 Generator: GlotPress/2.4.0-alpha
 Language: id
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">Untuk menyimpan gambar di folder publik, Anda perlu memberikan izin. Anda dapat memberikan izin di pengaturan aplikasi.</string>
+    <string name="gravatar_qe_download_manager_disabled_title">DownloadManager dinonaktifkan. Aktifkan untuk mengunduh Avatar.</string>
+    <string name="gravatar_qe_download_manager_not_available">DownloadManager tidak tersedia</string>
+    <string name="gravatar_qe_image_download_queued">Unduhan gambar diantrekan. Anda akan menerima pemberitahuan setelah proses selesai.</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">Batal</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">Hapus</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">Anda yakin ingin menghapus gambar ini?</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">Hapus Gambar</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">Unduh gambar</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">Hapus Avatar</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">Hapus</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">Error saat menghapus gambar.</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">Buka pengaturan</string>
+    <string name="gravatar_qe_upload_image_content_description">Unggah gambar</string>
+    <string name="gravatar_qe_happy_face_image_content_description">Gambar wajah senang</string>
+    <string name="gravatar_qe_login_required">Wajib login</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">Tidak ada koneksi internet</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">Tutup</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">Login</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">Sesi telah kedaluwarsa</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">Coba lagi</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">Ups</string>
+    <string name="gravatar_qe_capture_photo_icon_description">Tangkap Foto</string>
+    <string name="gravatar_qe_photo_library_icon_description">Pustaka foto</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">Ambil foto</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">Pilih foto</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">Unggah gambar</string>
+    <string name="gravatar_qe_avatar_upload_error_action">Coba lagi</string>
+    <string name="gravatar_qe_avatar_picker_title">Avatar</string>
+    <string name="gravatar_qe_bottom_sheet_done">Selesai</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">Teks Alternatif</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">Teks Alt</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">Pilihan Lainnya</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">Gambar Avatar</string>
+    <string name="gravatar_qe_gravatar">Gravatar</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">Ukuran gambar yang diberikan melebihi batas maksimal: 10 MB</string>
+    <string name="gravatar_qe_dismiss">Tutup</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">Untuk mengambil gambar, Anda perlu mengizinkan kamera. Anda dapat memberikan izin di pengaturan aplikasi.</string>
+    <string name="gravatar_qe_permission_required_alert_title">Izin diperlukan</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">Terjadi kesalahan saat memverifikasi email Anda.</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">Hapus unggahan</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">Tidak dapat mengunggah gambar</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">Unggahan gagal. Ketuk untuk menampilkan tindakan.</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">Sepertinya email yang digunakan untuk login salah. Coba lagi menggunakan %s. Terima kasih!</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">Sesi telah kedaluwarsa karena alasan keamanan.</string>
+    <string name="gravatar_qe_login_required_message">Untuk mengubah profil Gravatar, Anda harus login terlebih dahulu</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">Aduh! Tampaknya Anda tidak terhubung ke internet.</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">Sesi telah kedaluwarsa karena alasan keamanan. Login untuk memperbarui Avatar Anda.</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">Terjadi masalah serius.</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">Terjadi masalah sehingga kami tidak dapat terhubung ke server Gravatar.</string>
+    <string name="gravatar_qe_avatar_selection_error">Ups, terjadi error saat memilih avatar.</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">Mari siapkan avatar Anda</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">Avatar diperbarui! Tunggu sebentar hingga muncul di semua layar.</string>
+    <string name="gravatar_qe_avatar_picker_description">Pilih atau unggah gambar avatar favorit Anda, lalu hubungkan ke alamat email Anda.</string>
 </resources>
