--- a/gravatar-quickeditor/src/main/res/values-it/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-it/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-24 09:54:03+0000
+Translation-Revision-Date: 2024-11-27 13:54:03+0000
 Plural-Forms: nplurals=2; plural=n != 1;
 Generator: GlotPress/2.4.0-alpha
 Language: it
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">Per salvare l\'immagine in una cartella pubblica devi concedere l\'autorizzazione. Puoi concederla nelle impostazioni dell\'app.</string>
+    <string name="gravatar_qe_download_manager_disabled_title">DownloadManager è disabilitato. Abilitalo per scaricare gli avatar.</string>
+    <string name="gravatar_qe_download_manager_not_available">DownloadManager non è disponibile</string>
+    <string name="gravatar_qe_image_download_queued">Il download dell\'immagine è stato messo in coda. Riceverai una notifica quando sarà completato.</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">Annulla</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">Elimina</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">Desideri eliminare questa immagine?</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">Elimina immagine</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">Scarica immagine</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">Errore durante l\'eliminazione dell\'immagine.</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">Elimina avatar</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">Elimina</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">Apri le impostazioni</string>
+    <string name="gravatar_qe_upload_image_content_description">Carica immagine</string>
+    <string name="gravatar_qe_happy_face_image_content_description">Immagine faccina felice</string>
+    <string name="gravatar_qe_login_required">Accesso richiesto</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">Nessuna connessione Internet</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">Chiudi</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">Accedi</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">Sessione scaduta</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">Riprova</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">Ops</string>
+    <string name="gravatar_qe_capture_photo_icon_description">Acquisisci foto</string>
+    <string name="gravatar_qe_photo_library_icon_description">Libreria Foto</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">Scatta una foto</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">Scegli una foto</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">Carica immagine</string>
+    <string name="gravatar_qe_avatar_upload_error_action">Riprova</string>
+    <string name="gravatar_qe_avatar_picker_title">Avatar</string>
+    <string name="gravatar_qe_bottom_sheet_done">Fatto</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">Testo alternativo</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">Testo Alt</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">Altre opzioni</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">Immagine avatar</string>
+    <string name="gravatar_qe_gravatar">Gravatar</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">L\'immagine fornita supera il peso massimo: 10 MB</string>
+    <string name="gravatar_qe_dismiss">Ignora</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">Devi concedere l\'autorizzazione alla fotocamera per poter scattare foto. Puoi concederla nelle impostazioni dell\'app.</string>
+    <string name="gravatar_qe_permission_required_alert_title">Autorizzazione richiesta</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">Qualcosa è andato storto durante la verifica della tua e-mail.</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">Rimuovi caricamento</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">Impossibile caricare l\'immagine</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">Caricamento non riuscito. Tocca per vedere le azioni disponibili.</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">Sembra che tu abbia utilizzato l\'e-mail sbagliata per accedere. Riprova utilizzando %s. Grazie!</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">Sessione scaduta per ragioni di sicurezza.</string>
+    <string name="gravatar_qe_login_required_message">Per modificare il tuo profilo Gravatar devi prima accedere</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">Oh oh. Sembra non ci sia connessione a Internet.</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">Sessione scaduta per ragioni di sicurezza. Accedi per aggiornare l\'Avatar.</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">Si è verificato un problema.</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">Si è verificato un errore e non abbiamo potuto effettuare il collegamento ai server Gravatar.</string>
+    <string name="gravatar_qe_avatar_selection_error">Ops, si è verificato un errore durante la selezione dell\'avatar.</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">Imposta il tuo avatar</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">Avatar caricato. Potrebbe volerci qualche minuto prima che venga visualizzato ovunque.</string>
+    <string name="gravatar_qe_avatar_picker_description">Scegli o carica le tue immagini avatar preferite e collegale al tuo indirizzo e-mail.</string>
 </resources>
