--- a/gravatar-quickeditor/src/main/res/values-iw/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-iw/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-23 14:42:20+0000
+Translation-Revision-Date: 2024-11-27 15:54:03+0000
 Plural-Forms: nplurals=2; plural=n != 1;
 Generator: GlotPress/2.4.0-alpha
 Language: he_IL
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">כדי לשמור את התמונה בתיקייה ציבורית, עליך להעניק הרשאה. אפשר להעניק את ההרשאות בהגדרות האפליקציה.</string>
+    <string name="gravatar_qe_download_manager_disabled_title">האפשרות DownloadManager מושבתת. יש להפעיל אותה כדי להוריד צלמיות משתמשים.</string>
+    <string name="gravatar_qe_download_manager_not_available">האפשרות DownloadManager לא זמינה</string>
+    <string name="gravatar_qe_image_download_queued">הורדת התמונה נוספה לתור. תישלח אליך הודעה עם השלמת התהליך.</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">ביטול</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">למחוק</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">האם ברצונך למחוק את התמונה הזו?</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">למחוק את התמונה</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">להוריד את התמונה</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">שגיאה במחיקת התמונה.</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">למחוק צלמית משתמש</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">למחוק</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">לפתוח את ההגדרות</string>
+    <string name="gravatar_qe_upload_image_content_description">להעלות תמונה</string>
+    <string name="gravatar_qe_happy_face_image_content_description">תמונה של פנים שמחות</string>
+    <string name="gravatar_qe_login_required">נדרשת התחברות</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">אין אינטרנט</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">לסגור</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">התחברות</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">פג תוקף ההפעלה</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">לנסות שוב</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">אופס</string>
+    <string name="gravatar_qe_capture_photo_icon_description">לצלם תמונה</string>
+    <string name="gravatar_qe_photo_library_icon_description">ספריית תמונות</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">צילום תמונה</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">לבחור תמונה</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">להעלות תמונה</string>
+    <string name="gravatar_qe_avatar_upload_error_action">לנסות שוב</string>
+    <string name="gravatar_qe_avatar_picker_title">צלמיות משתמשים</string>
+    <string name="gravatar_qe_bottom_sheet_done">בוצע</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">טקסט חלופי</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">טקסט חלופי</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">אפשרויות נוספות</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">תמונה של צלמית המשתמש</string>
+    <string name="gravatar_qe_gravatar">Gravatar</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">התמונה שהוספת חורגת ממגבלות הגודל: 10‎ MB</string>
+    <string name="gravatar_qe_dismiss">לבטל</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">כדי לצלם תמונה, עליך להעניק הרשאות למצלמה. אפשר להעניק את ההרשאות בהגדרות האפליקציה.</string>
+    <string name="gravatar_qe_permission_required_alert_title">נדרשת הרשאה</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">משהו השתבש במהלך אימות האימייל.</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">להסיר את ההעלאה</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">לא ניתן להעלות את התמונה</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">ההעלאה נכשלה. יש להקיש להצגת הפעולות.</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">נראה שהשתמשת בכתובת אימייל שגויה כדי להיכנס. יש לנסות שוב באמצעות %s הפעם. תודה!</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">מטעמי אבטחה, פג תוקף ההפעלה.</string>
+    <string name="gravatar_qe_login_required_message">כדי לשנות את פרופיל ה-Gravatar שלך, עליך להתחבר תחילה</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">אוי לא! נראה שהחיבור לאינטרנט לא פעיל אצלך.</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">מטעמי אבטחה, פג תוקף ההפעלה. עליך להתחבר כדי לעדכן את צלמית המשתמש שלך.</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">אוי, משהו השתבש.</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">משהו השתבש ולא הצלחנו להתחבר לשרתים של Gravatar.</string>
+    <string name="gravatar_qe_avatar_selection_error">אופס, אירעה שגיאה בבחירת צלמית המשתמש.</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">זה הזמן להגדיר את צלמית המשתמש שלך</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">צלמית המשתמש עודכנה! ייתכן שיעברו מספר דקות עד שהשינוי יופיע בכל מקום.</string>
+    <string name="gravatar_qe_avatar_picker_description">יש לבחור או להעלות את התמונות המועדפות עליך לצלמית משתמש ולחבר אותן אל כתובת האימייל שלך.</string>
 </resources>
