--- a/gravatar-quickeditor/src/main/res/values-ja/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-ja/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-24 09:54:02+0000
+Translation-Revision-Date: 2024-11-28 09:54:03+0000
 Plural-Forms: nplurals=1; plural=0;
 Generator: GlotPress/2.4.0-alpha
 Language: ja_JP
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">パブリックフォルダーに画像を保存するには、パーミッションを付与する必要があります。 アプリの設定でパーミッションを付与できます。</string>
+    <string name="gravatar_qe_download_manager_disabled_title">DownloadManager は無効です。 アバターをダウンロードするには、有効にしてください。</string>
+    <string name="gravatar_qe_download_manager_not_available">DownloadManager は利用できません。</string>
+    <string name="gravatar_qe_image_download_queued">画像のダウンロードが待機リストに追加されました。 完了すると、通知が送られてきます。</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">キャンセル</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">削除</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">この画像を削除してもよろしいですか ?</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">画像を削除</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">画像をダウンロード</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">画像の削除中にエラーが発生しました。</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">アバターを削除</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">削除</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">設定を開く</string>
+    <string name="gravatar_qe_upload_image_content_description">画像をアップロード</string>
+    <string name="gravatar_qe_happy_face_image_content_description">幸せそうな顔の画像</string>
+    <string name="gravatar_qe_login_required">ログインが必須です</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">インターネットに接続されていません</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">閉じる</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">ログイン</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">セッションの有効期限が切れました</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">再試行</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">エラーが発生しました</string>
+    <string name="gravatar_qe_capture_photo_icon_description">写真をキャプチャ</string>
+    <string name="gravatar_qe_photo_library_icon_description">フォトライブラリ</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">写真を撮影</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">写真を選択</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">画像をアップロード</string>
+    <string name="gravatar_qe_avatar_upload_error_action">再試行</string>
+    <string name="gravatar_qe_avatar_picker_title">アバター</string>
+    <string name="gravatar_qe_bottom_sheet_done">完了</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">代替テキスト</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">代替テキスト</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">追加オプション</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">アバター画像</string>
+    <string name="gravatar_qe_gravatar">Gravatar</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">提供された画像は最大サイズの10MB を超えています。</string>
+    <string name="gravatar_qe_dismiss">閉じる</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">写真を撮影するには、カメラのアクセス権限を許可する必要があります。 アプリの設定でアクセス権限を許可できます。</string>
+    <string name="gravatar_qe_permission_required_alert_title">アクセス権限の許可が必要です</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">メールアドレスを確認中にエラーが発生しました。</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">アップロードを削除</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">画像をアップロードできませんでした</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">アップロードに失敗しました。タップしてアクションを確認してください。</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">間違ったメールアドレスを使用してログインしたようです。 今回は %s を使用してもう一度お試しください。 ありがとうございます。</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">セキュリティ上の理由でセッションの有効期限が切れました。</string>
+    <string name="gravatar_qe_login_required_message">Gravatar プロフィールを変更するには、まずログインする必要があります</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">エラーが発生しました。 インターネットに接続されていないようです。</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">セキュリティ上の理由でセッションの有効期限が切れました。 ログインしてアバターを更新してください。</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">大きな問題が発生しました。</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">問題が発生したため、Gravatar サーバーに接続できませんでした。</string>
+    <string name="gravatar_qe_avatar_selection_error">アバターの選択中にエラーが発生しました。</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">アバターを設定しましょう</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">アバターを更新しました。 すべての場所で表示されるまでには数分かかる可能性があります。</string>
+    <string name="gravatar_qe_avatar_picker_description">お気に入りのアバター画像を選択またはアップロードして、メールアドレスに連携します。</string>
 </resources>
