--- a/gravatar-quickeditor/src/main/res/values-ko/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-ko/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-24 09:54:03+0000
+Translation-Revision-Date: 2024-11-27 09:54:03+0000
 Plural-Forms: nplurals=1; plural=0;
 Generator: GlotPress/2.4.0-alpha
 Language: ko_KR
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">이미지를 공개 폴더에 저장하려면 권한을 부여해야 합니다. 권한은 앱 설정에서 부여할 수 있습니다.</string>
+    <string name="gravatar_qe_download_manager_disabled_title">DownloadManager가 비활성화되어 있습니다. 아바타를 다운로드하려면 활성화하세요.</string>
+    <string name="gravatar_qe_download_manager_not_available">DownloadManager를 사용할 수 없습니다.</string>
+    <string name="gravatar_qe_image_download_queued">이미지 다운로드가 대기열에 추가되었습니다. 완료되면 알림이 전송됩니다.</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">취소</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">삭제</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">이 이미지를 삭제하시겠습니까?</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">이미지 삭제</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">이미지 다운로드</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">이미지를 삭제하는 중 오류가 발생했습니다.</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">아바타 삭제</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">삭제</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">설정 열기</string>
+    <string name="gravatar_qe_upload_image_content_description">이미지 업로드</string>
+    <string name="gravatar_qe_happy_face_image_content_description">행복한 얼굴 이미지</string>
+    <string name="gravatar_qe_login_required">로그인 필요</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">인터넷에 연결되지 않음</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">닫기</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">로그인</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">세션이 만료됐습니다</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">다시 시도</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">이런</string>
+    <string name="gravatar_qe_capture_photo_icon_description">사진 캡처</string>
+    <string name="gravatar_qe_photo_library_icon_description">사진 라이브러리</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">사진 촬영</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">사진 선택</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">이미지 업로드</string>
+    <string name="gravatar_qe_avatar_upload_error_action">다시 시도</string>
+    <string name="gravatar_qe_avatar_picker_title">아바타</string>
+    <string name="gravatar_qe_bottom_sheet_done">완료</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">대체 텍스트</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">대체 텍스트</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">추가 옵션</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">아바타 이미지</string>
+    <string name="gravatar_qe_gravatar">그라바타</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">제공된 이미지가 최대 크기(10MB)를 초과합니다.</string>
+    <string name="gravatar_qe_dismiss">해제</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">사진을 찍으려면 카메라 권한을 부여해야 합니다. 권한은 앱 설정에서 부여할 수 있습니다.</string>
+    <string name="gravatar_qe_permission_required_alert_title">권한 필수</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">이메일 확인 중 문제가 발생했습니다.</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">업로드 제거</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">이미지 업로드 불가</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">업로드하지 못했습니다. 눌러서 작업을 확인하세요.</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">잘못된 이메일을 사용하여 로그인하신 것 같습니다. 이번에는 %s을(를) 사용하여 시도해 보세요. 감사합니다!</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">보안상의 이유로 세션이 만료되었습니다.</string>
+    <string name="gravatar_qe_login_required_message">그라바타 프로필을 수정하려면 먼저 로그인해야 합니다.</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">이런! 인터넷에 연결되지 않은 것 같습니다.</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">보안상의 이유로 세션이 만료되었습니다. 아바타를 업데이트하려면 로그인하세요.</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">큰 문제가 발생했습니다.</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">문제가 발생하여 그라바타 서버에 연결할 수 없습니다.</string>
+    <string name="gravatar_qe_avatar_selection_error">이런, 아바타를 선택하는 중 오류가 발생했습니다.</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">아바타를 설정하겠습니다.</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">아바타가 업데이트되었습니다! 모든 곳에 표시되는 데 몇 분이 소요될 수 있습니다.</string>
+    <string name="gravatar_qe_avatar_picker_description">좋아하는 아바타 이미지를 선택하거나 업로드하고 이메일 주소에 연결하세요.</string>
 </resources>
