--- a/gravatar-quickeditor/src/main/res/values-pt-rBR/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-pt-rBR/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-23 14:54:03+0000
+Translation-Revision-Date: 2024-11-28 09:54:02+0000
 Plural-Forms: nplurals=2; plural=(n > 1);
 Generator: GlotPress/2.4.0-alpha
 Language: pt_BR
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">Para salvar a imagem em uma pasta pública, você precisa conceder permissão. Você pode fazer isso nas configurações do app.</string>
+    <string name="gravatar_qe_download_manager_disabled_title">O DownloadManager está desativado. Ative-o para fazer download de avatares.</string>
+    <string name="gravatar_qe_download_manager_not_available">O DownloadManager não está disponível</string>
+    <string name="gravatar_qe_image_download_queued">O download da imagem está na fila. Você receberá uma notificação quando for concluído.</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">Cancelar</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">Excluir</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">Tem certeza de que deseja excluir essa imagem?</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">Excluir imagem</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">Fazer download da imagem</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">Erro ao excluir a imagem.</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">Excluir Avatar</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">Excluir</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">Abrir configurações</string>
+    <string name="gravatar_qe_upload_image_content_description">Fazer upload da imagem</string>
+    <string name="gravatar_qe_happy_face_image_content_description">Imagem de um rosto feliz</string>
+    <string name="gravatar_qe_login_required">Login obrigatório</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">Sem Internet</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">Fechar</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">Fazer login</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">A sessão expirou</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">Tentar novamente</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">Ops!</string>
+    <string name="gravatar_qe_capture_photo_icon_description">Tirar foto</string>
+    <string name="gravatar_qe_photo_library_icon_description">Biblioteca de fotos</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">Tirar foto</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">Escolher uma foto</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">Fazer upload da imagem</string>
+    <string name="gravatar_qe_avatar_upload_error_action">Tentar novamente</string>
+    <string name="gravatar_qe_avatar_picker_title">Avatares</string>
+    <string name="gravatar_qe_bottom_sheet_done">Concluído</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">Texto alternativo</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">Texto alternativo</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">Mais opções</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">Imagem do avatar</string>
+    <string name="gravatar_qe_gravatar">Gravatar</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">A imagem fornecida excede o tamanho máximo: 10 MB</string>
+    <string name="gravatar_qe_dismiss">Ignorar</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">Para tirar uma foto, é necessário conceder permissão para o uso da câmera. Você pode fazer isso nas configurações do app.</string>
+    <string name="gravatar_qe_permission_required_alert_title">Permissão obrigatória</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">Ocorreu um erro ao verificar seu e-mail.</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">Remover upload</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">Não foi possível fazer upload da imagem</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">Falha no envio. Toque para ver o que você pode fazer.</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">Parece que você usou o e-mail errado para fazer login. Experimente usar %s desta vez. Obrigado!</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">A sessão expirou por motivos de segurança.</string>
+    <string name="gravatar_qe_login_required_message">Para alterar seu perfil no Gravatar, você precisa fazer login primeiro</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">Ops! Parece que você não está conectado à Internet.</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">A sessão expirou por motivos de segurança. Faça login para atualizar seu avatar.</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">Ocorreu um erro grave.</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">Algo deu errado e não foi possível conectar os servidores do Gravatar.</string>
+    <string name="gravatar_qe_avatar_selection_error">Ops! Ocorreu um erro ao selecionar o avatar.</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">Vamos configurar seu avatar</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">Avatar atualizado! Pode levar alguns minutos para que ele apareça em todos os lugares.</string>
+    <string name="gravatar_qe_avatar_picker_description">Escolha ou faça upload das suas imagens de avatar favoritas e conecte ao seu endereço de e-mail.</string>
 </resources>
