--- a/gravatar-quickeditor/src/main/res/values-zh-rCN/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-zh-rCN/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-23 13:54:03+0000
+Translation-Revision-Date: 2024-11-27 11:54:03+0000
 Plural-Forms: nplurals=1; plural=0;
 Generator: GlotPress/2.4.0-alpha
 Language: zh_CN
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">要将图片保存到公共文件夹中，您需要授予权限。 您可以在应用程序设置中授予该权限。</string>
+    <string name="gravatar_qe_download_manager_disabled_title">DownloadManager 已禁用。 请将其启用以下载头像。</string>
+    <string name="gravatar_qe_download_manager_not_available">DownloadManager 不可用</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">取消</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">删除</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">是否确定要删除这张图片？</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">删除图片</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">下载图片</string>
+    <string name="gravatar_qe_image_download_queued">已将图片加入下载队列。 下载完成后，您将收到通知。</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">删除图片时发生错误。</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">删除头像</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">删除</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">打开设置</string>
+    <string name="gravatar_qe_upload_image_content_description">上传图片</string>
+    <string name="gravatar_qe_happy_face_image_content_description">笑脸图片</string>
+    <string name="gravatar_qe_login_required">需要登录</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">没有网络</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">关闭</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">登录</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">会话已过期</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">重试</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">哎呀</string>
+    <string name="gravatar_qe_capture_photo_icon_description">捕获照片</string>
+    <string name="gravatar_qe_photo_library_icon_description">照片库</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">拍摄照片</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">选择照片</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">上传图片</string>
+    <string name="gravatar_qe_avatar_upload_error_action">重试</string>
+    <string name="gravatar_qe_avatar_picker_title">头像</string>
+    <string name="gravatar_qe_bottom_sheet_done">完成</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">替代文本</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">替代文本</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">更多选项</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">头像图片</string>
+    <string name="gravatar_qe_gravatar">Gravatar</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">所提供图片的大小超出最大值：10 MB</string>
+    <string name="gravatar_qe_dismiss">忽略</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">要拍摄照片，您需要授予相机权限。 您可以在应用程序设置中授予该权限。</string>
+    <string name="gravatar_qe_permission_required_alert_title">需要权限</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">验证您的电子邮件地址时出错。</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">移除上传内容</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">无法上传图片</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">上传失败，轻点以查看操作。</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">您在登录时似乎使用了错误的电子邮件地址。 这次请使用 %s 再试一次。 谢谢！</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">出于安全原因，会话已过期。</string>
+    <string name="gravatar_qe_login_required_message">要修改您的 Gravatar 个人资料，请先登录</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">糟糕！ 您似乎未连接到互联网。</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">出于安全原因，会话已过期。 请登录以更新您的头像。</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">出现严重错误。</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">出现错误，我们无法连接到 Gravatar 服务器。</string>
+    <string name="gravatar_qe_avatar_selection_error">哎呀，选择头像时出错了。</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">让我们来设置您的头像</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">头像已更新！ 它可能需要几分钟才能在各处同步。</string>
+    <string name="gravatar_qe_avatar_picker_description">选择或上传您最喜欢的头像图片，并将它们与您的电子邮件地址相关联。</string>
 </resources>
