--- a/gravatar-quickeditor/src/main/res/values-zh-rTW/strings.xml
+++ b/gravatar-quickeditor/src/main/res/values-zh-rTW/strings.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-10-24 09:54:03+0000
+Translation-Revision-Date: 2024-11-27 13:54:03+0000
 Plural-Forms: nplurals=1; plural=0;
 Generator: GlotPress/2.4.0-alpha
 Language: zh_TW
 -->
 <resources>
-
+    <string name="gravatar_qe_write_external_storage_permission_rationale_message">若要在公開資料夾儲存圖片，請授予權限。 你可以在應用程式設定中授予權限。</string>
+    <string name="gravatar_qe_download_manager_disabled_title">DownloadManager 已停用。 請啟用以下載大頭貼。</string>
+    <string name="gravatar_qe_download_manager_not_available">無法使用 DownloadManager</string>
+    <string name="gravatar_qe_image_download_queued">圖片下載作業已排入佇列。 下載完成後，系統會傳送通知給你。</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_cancel">取消</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_confirm">刪除</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_message">你確定要刪除這張圖片嗎？</string>
+    <string name="gravatar_qe_avatar_delete_confirmation_title">刪除圖片</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_download_image">下載圖片</string>
+    <string name="gravatar_qe_avatar_delete_avatar_error">刪除圖片時發生錯誤。</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete_content_description">刪除大頭貼</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_delete">刪除</string>
+    <string name="gravatar_qe_permission_rationale_open_settings">開啟設定</string>
+    <string name="gravatar_qe_upload_image_content_description">上傳圖片</string>
+    <string name="gravatar_qe_happy_face_image_content_description">笑臉圖片</string>
+    <string name="gravatar_qe_login_required">需要登入</string>
+    <string name="gravatar_qe_avatar_picker_network_error_title">無網際網路</string>
+    <string name="gravatar_qe_avatar_picker_session_error_close_cta">關閉</string>
+    <string name="gravatar_qe_avatar_picker_session_error_cta">登入</string>
+    <string name="gravatar_qe_avatar_picker_session_error_title">工作階段已過期</string>
+    <string name="gravatar_qe_avatar_picker_error_retry_cta">再試一次</string>
+    <string name="gravatar_qe_avatar_picker_server_error_title">糟糕</string>
+    <string name="gravatar_qe_capture_photo_icon_description">拍攝照片</string>
+    <string name="gravatar_qe_photo_library_icon_description">照片庫</string>
+    <string name="gravatar_qe_avatar_picker_take_photo">拍攝照片</string>
+    <string name="gravatar_qe_avatar_picker_choose_a_photo">選擇一張照片</string>
+    <string name="gravatar_qe_avatar_picker_upload_image">上傳圖片</string>
+    <string name="gravatar_qe_avatar_upload_error_action">重試</string>
+    <string name="gravatar_qe_avatar_picker_title">大頭貼</string>
+    <string name="gravatar_qe_bottom_sheet_done">完成</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text_content_description">替代文字</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_alt_text">替代文字</string>
+    <string name="gravatar_qe_selectable_avatar_more_options_content_description">更多選項</string>
+    <string name="gravatar_qe_selectable_avatar_content_description">大頭貼圖片</string>
+    <string name="gravatar_qe_gravatar">Gravatar</string>
+    <string name="gravatar_qe_avatar_upload_failure_image_too_big">你提供的圖片超過大小上限：10MB</string>
+    <string name="gravatar_qe_dismiss">關閉</string>
+    <string name="gravatar_qe_camera_permission_rationale_message">若要拍照，請授予相機使用權限。 你可以在應用程式設定中授予權限。</string>
+    <string name="gravatar_qe_permission_required_alert_title">需要權限</string>
+    <string name="gravatar_qe_oauth_email_associated_error_message">驗證電子郵件地址時發生錯誤。</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_remove_upload">移除上傳內容</string>
+    <string name="gravatar_qe_avatar_upload_failure_dialog_title">無法上傳圖片</string>
+    <string name="gravatar_qe_failed_to_load_avatar_content_description">上傳失敗，點選以查看動作。</string>
+    <string name="gravatar_qe_oauth_wrong_email_authenticated_error_message">你的登入用電子郵件地址似乎有誤。 這次請使用「%s」再試一次。 謝謝！</string>
+    <string name="gravatar_qe_avatar_picker_session_error_no_login_message">基於安全考量，工作階段已過期。</string>
+    <string name="gravatar_qe_login_required_message">請先登入，才可修改 Gravatar 個人檔案</string>
+    <string name="gravatar_qe_avatar_picker_network_error_message">噢噢，不好了。 看來你目前並未連上網際網路。</string>
+    <string name="gravatar_qe_avatar_picker_session_error_message">基於安全考量，工作階段已過期。 請登入以更新大頭貼。</string>
+    <string name="gravatar_qe_avatar_picker_unknown_error_message">發生嚴重錯誤。</string>
+    <string name="gravatar_qe_avatar_picker_server_error_message">發生錯誤，我們無法連結至 Gravatar 伺服器。</string>
+    <string name="gravatar_qe_avatar_selection_error">糟糕，在選取大頭貼時發生錯誤。</string>
+    <string name="gravatar_qe_avatar_picker_title_empty_state">立即設定你的大頭貼</string>
+    <string name="gravatar_qe_avatar_selected_confirmation_v2">已更新大頭貼！ 可能需要幾分鐘，大頭貼才會顯示於各處。</string>
+    <string name="gravatar_qe_avatar_picker_description">選擇或上傳你喜愛的大頭貼圖片，並與電子郵件地址建立連結。</string>
 </resources>
