--- a/gravatar-ui/src/main/res/values-de/strings.xml
+++ b/gravatar-ui/src/main/res/values-de/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-09-11 16:54:02+0000
+Translation-Revision-Date: 2024-10-30 12:54:02+0000
 Plural-Forms: nplurals=2; plural=n != 1;
 Generator: GlotPress/2.4.0-alpha
 Language: de
 -->
 <resources>
-
+    <string name="gravatar_ui_empty_state_view_profile_button">Profil beanspruchen</string>
+    <string name="gravatar_ui_empty_state_user_info">Ort, Pronomen usw. hinzufügen</string>
+    <string name="gravatar_ui_empty_state_display_name">Dein Name</string>
+    <string name="gravatar_ui_view_profile_button">Profil anzeigen</string>
+    <string name="gravatar_ui_empty_state_about_me">Zeig der Welt, wer du bist. Mit einem Avatar und einer Biografie, die dich überall im Web begleiten.</string>
 </resources>
