--- a/gravatar-ui/src/main/res/values-fr/strings.xml
+++ b/gravatar-ui/src/main/res/values-fr/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-09-02 13:15:22+0000
+Translation-Revision-Date: 2024-10-31 09:54:02+0000
 Plural-Forms: nplurals=2; plural=n > 1;
 Generator: GlotPress/2.4.0-alpha
 Language: fr
 -->
 <resources>
-
+    <string name="gravatar_ui_empty_state_view_profile_button">Demander un profil</string>
+    <string name="gravatar_ui_empty_state_user_info">Ajoutez votre emplacement, vos pronoms, etc.</string>
+    <string name="gravatar_ui_empty_state_display_name">Votre nom</string>
+    <string name="gravatar_ui_view_profile_button">Afficher le profil</string>
+    <string name="gravatar_ui_empty_state_about_me">Faites savoir au monde qui vous êtes. Votre avatar et votre bio qui vous suivent partout sur le Web.</string>
 </resources>
