--- a/gravatar-ui/src/main/res/values-in/strings.xml
+++ b/gravatar-ui/src/main/res/values-in/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-09-13 14:54:03+0000
+Translation-Revision-Date: 2024-10-31 09:54:05+0000
 Plural-Forms: nplurals=2; plural=n > 1;
 Generator: GlotPress/2.4.0-alpha
 Language: id
 -->
 <resources>
-
+    <string name="gravatar_ui_empty_state_view_profile_button">Klaim profil</string>
+    <string name="gravatar_ui_empty_state_user_info">Masukkan lokasi, kata ganti Anda, dll.</string>
+    <string name="gravatar_ui_empty_state_display_name">Nama Anda</string>
+    <string name="gravatar_ui_view_profile_button">Lihat Profil</string>
+    <string name="gravatar_ui_empty_state_about_me">Perkenalkan diri Anda. Avatar dan bio yang menyertai aktivitas online Anda.</string>
 </resources>
