--- a/gravatar-ui/src/main/res/values-it/strings.xml
+++ b/gravatar-ui/src/main/res/values-it/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-09-11 22:54:04+0000
+Translation-Revision-Date: 2024-10-30 10:54:02+0000
 Plural-Forms: nplurals=2; plural=n != 1;
 Generator: GlotPress/2.4.0-alpha
 Language: it
 -->
 <resources>
-
+    <string name="gravatar_ui_empty_state_view_profile_button">Rivendica profilo</string>
+    <string name="gravatar_ui_empty_state_user_info">Aggiungi posizione, pronomi, ecc</string>
+    <string name="gravatar_ui_empty_state_display_name">Il tuo nome</string>
+    <string name="gravatar_ui_view_profile_button">Visualizza profilo</string>
+    <string name="gravatar_ui_empty_state_about_me">Racconta chi sei a tutto il mondo. L\'avatar e la bio che ti accompagnano in tutto il web.</string>
 </resources>
