--- a/gravatar-ui/src/main/res/values-nl/strings.xml
+++ b/gravatar-ui/src/main/res/values-nl/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-09-13 16:54:05+0000
+Translation-Revision-Date: 2024-10-31 13:54:03+0000
 Plural-Forms: nplurals=2; plural=n != 1;
 Generator: GlotPress/2.4.0-alpha
 Language: nl
 -->
 <resources>
-
+    <string name="gravatar_ui_empty_state_view_profile_button">Profiel claimen</string>
+    <string name="gravatar_ui_empty_state_user_info">Je locatie, persoonlijk voornaamwoorden, etc. toevoegen</string>
+    <string name="gravatar_ui_empty_state_display_name">Je naam</string>
+    <string name="gravatar_ui_view_profile_button">Profiel weergeven</string>
+    <string name="gravatar_ui_empty_state_about_me">Vertel de wereld wie je bent. Je avatar en bio die het hele web met je overgaan.</string>
 </resources>
