--- a/gravatar-ui/src/main/res/values-sv/strings.xml
+++ b/gravatar-ui/src/main/res/values-sv/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Translation-Revision-Date: 2024-09-11 11:54:03+0000
+Translation-Revision-Date: 2024-10-29 07:32:44+0000
 Plural-Forms: nplurals=2; plural=n != 1;
 Generator: GlotPress/2.4.0-alpha
 Language: sv_SE
 -->
 <resources>
-
+    <string name="gravatar_ui_empty_state_view_profile_button">Gör anspråk på profil</string>
+    <string name="gravatar_ui_empty_state_user_info">Lägg till din plats, pronomen etc.</string>
+    <string name="gravatar_ui_empty_state_display_name">Ditt namn</string>
+    <string name="gravatar_ui_view_profile_button">Visa profil</string>
+    <string name="gravatar_ui_empty_state_about_me">Berätta för världen vem du är. Din profilbild och bio som följer dig över hela webben.</string>
 </resources>
